--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -2,8 +2,8 @@
 spring:
  datasource:
   url: jdbc:postgresql://192.168.99.100:5432/employer
-  username: docker
-  password: pass
+  username: admin
+  password: secret
  jpa:
   hibernate:
    ddl-auto: update
