1)Changed api for EmployeeController.   --Employee update action will be available with Put under /employees/{employeeId} and a body object that will contain an EmployeeDto that does not carry the employee Id.   --For creating a new employee with Post the body object will be an EmployeeDto that does not carry the employee Id. Before this change this api expected an EmployeeDto that carried the Id but was ignored.   That is the reason why Employee controller has now 2 DTO objects. EmployeeDto has all fields of an employee except the id. EmployeeWithIdDto has all fields of an employee but with id also.   2)Added swagger documentation for all rest endpoints     --It was necessary to refactor the controllers to return a specific object inside the response entity. Bad requests are handled in the controller with throwing an exception that will handled by the global error handler.

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -11,11 +11,23 @@ spring:
 server:
  port: 9595
 
+ swagger.enabled: true
+
 spring.jackson.deserialization.fail-on-unknown-properties: true
 
 jwt.secret: fsdfsdfsdf
 
-security.ignored: /authenticate
+base.swagger.url: /
+springfox.documentation.swagger.v2.path: /api/swagger.json
+auth.entry.point: /authenticate
+swager.exclude.from.security: "/v3/api-docs,/swagger-ui/,/api/swagger.json,/swagger-ui/**,/swagger-resources/**"
+
+#swagger.api.exclude.from.security: /v3/api-docs
+#swager.index.exclude.from.security: /swagger-ui/
+
+api.description:
 
 #Log http requests and responses
 logging.level.org.springframework.ws.server.MessageTracing.sent: TRACE
+#Log every url mapping at startup
+logging.level.org.springframework.web.servlet.mvc.method.annotation: TRACE
