--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,7 +1,7 @@
 # Datasource
 spring:
  datasource:
-  url: jdbc:postgresql://192.168.99.100:5432/employer
+  url: jdbc:postgresql://db:5432/employer
   username: admin
   password: secret
  jpa:
